Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -38,8 +38,55 @@ font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     }
   
     
-    #cla{
+    //#cla{
         font-size: 30px;
+    }
+    .city{
+        color: rgb(0, 0, 0);
+        height: 700px;
+        width: 40%;
+        box-shadow: 10px 10px 10px gray;
+        background: rgb(255, 255, 255);
+        margin: auto; position: absolute;
+        text-align: center;
+        margin-left:50px;
+    }
+    .ai{
+        color: rgb(0, 0, 0);
+        height: 700px;
+        width: 40%;
+        box-shadow: 10px 10px 10px gray;
+        background: rgb(253, 253, 253);
+        margin: auto; position: relative;
+        text-align: center;
+        left: 20%;
+    }
+      .ab{
+        color: rgb(0, 0, 0);
+        height: 700px;
+        width: 40%;
+        box-shadow: 10px 10px 10px gray;
+        background: rgb(255, 255, 255);
+        margin: auto; position: absolute;
+        text-align: center;
+        padding-left: 30px;
+        padding-top:50px ;
+           margin-left:20px ; 
+    }
+    .ac{
+        color: rgb(0, 0, 0);
+        height: 700px;
+        width: 40%;
+        box-shadow: 10px 10px 10px gray;
+        background: rgb(253, 253, 253);
+        margin: auto; position: relative;
+        text-align: center;
+        left: 20%;
+         padding-top:50px ;
+    }
+    #qt{
+        font-size: 100px;
+        font-family: inherit;
     }
    
 </style>
@@ -75,5 +122,57 @@ font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
     </nav>
    </div> 
+    <h1>AI Technology</h1>
+  <div class ="city" >
+   
+    <img src="images/p2.jpg " width="100% " height="400px" position=" relative" >
+    <p><h2>By 2047, the government's "Viksit Bharat" </h2>(Developed India) vision aims to transform India into a prosperous, self-reliant, developed nation with world-class infrastructure, robust economic growth, technological advancement, and improved quality of life for its citizens. Projections suggest India could have one of the world's largest economies, a vast digital market, and a significant shift towards sustainable technologies, though the government also needs to focus on inclusive economic participation and streamlined governance to achieve these goals. </p>
+   </div>
+
+   <div class ="ai" >
+   
+    <img src="images/p3.jpg " width="100% " height="400px" position=" relative" >
+    <p><h2>By 2047, the government's "Viksit Bharat" </h2>(Developed India) vision aims to transform India into a prosperous, self-reliant, developed nation with world-class infrastructure, robust economic growth, technological advancement, and improved quality of life for its citizens. Projections suggest India could have one of the world's largest economies, a vast digital market, and a significant shift towards sustainable technologies, though the government also needs to focus on inclusive economic participation and streamlined governance to achieve these goals. </p>
+   </div>
+
+     <div class ="ab" >
+   <img src="images/p5.jpg " width="100% " height="400px" position=" relative" >
+    <p><h2>India’s AI Revolution: A Roadmap to Viksit Bharat </h2>India is undergoing a significant transformation in Artificial Intelligence (AI), driven by various initiatives like: IndiaAI Mission and the establishment of Centres of Excellence (CoE) for AI are bolstering India’s AI ecosystem.
+
+All these initiatives are in alignment with the vision of Viksit Bharat by 2047, where India aims to become a global hub of AI, leveraging cutting-edge technology for economic growth, governance, and societal progress.
+In 2024, the Government of India(GoI) approved the IndiaAI Mission with an outlay of Rs 10,300 crore over five years to strengthen AI capabilities in India.
+The Mission is being implemented by the Ministry of Electronics and Information Technology (MeitY) through ‘IndiaAI’ Independent Business Division (IBD) under Digital India Corporation (DIC). </p>
+   </div>
+
+    <div class ="ac" >
+   <img src="images/p4.jpg " width="100% " height="400px" position=" relative" >
+    <p><h2>AI can lead to 8% plus economic growth to realise the vision of 'Viksit Bharat': NITI Aayog Report </h2>India has the opportunity to harness Artificial Intelligence (AI) as a decisive lever to achieve accelerated economic growth and realise the vision of 'Viksit Bharat', according to the roadmap released by NITI Aayog and Niti Frontier Tech Hub on Monday at New Delhi.
+
+The report, titled "AI for Viksit Bharat: The Opportunity for Accelerated Economic Growth", outlines how AI adoption across industries and transformation of research and development (R&D) can bridge nearly half of the growth gap required to move India from a projected GDP of $6.6 trillion to $8.3 trillion by 2035. </p>
+   </div>
+<h1 id ="qt"> Robotic Life </h1>
+
+  
+<div class ="ab" >
+   <img src="images/p7.jpg " width="100% " height="400px" position=" relative" >
+    <p><h2>Robotic Hospitals </h2>IA robotic hospital uses robotic systems to perform surgery, enhance patient care, and assist with hospital logistics. Robotic-assisted surgery is a form of minimally invasive surgery where a surgeon controls robotic arms to perform procedures with greater precision, often resulting in smaller incisions, less pain, and faster recovery times. Other robots are used for tasks like delivering supplies, disinfecting rooms, and even helping with patient mobility, freeing up staff to focus on clinical care.   </p>
+   </div>
+     <div class ="ac" >
+   <img src="images/p6.jpg " width="100% " height="400px" position=" relative" >
+    <p><h2>Examining the Impact of 6G Telecommunications on Society</h2>With greater global connectivity, the case for 6G telecommunications has become more apparent than ever before. The generations of wireless cellular technology (or the Gs) have been incrementing every 10 years: 1G prior to 1990, 2G in 1990, 3G in 2000, 4G in 2010, and 5G in 2020. We expect 6G to roll out in 2030.
+
+When the Gs are plotted over time, the data volume increases exponentially and therefore reinforces the need for newer technological platforms. With pun intended, technologists call this broadening, or broader usage of the frequency spectrum. </p>
+   </div>
+<div class ="ab" >
+   <img src="images/p8.jpg " width="100% " height="400px" position=" relative" >
+    <p><h2>Farming </h2>In the future, technical farming in India will be defined by the integration of advanced technologies like AI, IoT, drones, and robotics to increase efficiency, productivity, and sustainability. This transformation is necessary to address pressing challenges like climate change, resource scarcity, and the need to feed a growing population. 
+Key technologies shaping future farming
+Artificial Intelligence (AI) and Machine Learning (ML): AI will move Indian agriculture toward a data-driven, precision-based model. AI and ML algorithms will provide actionable insights to farmers by analyzing real-time data on soil health   </p>
+   </div>
+     <div class ="ac" >
+   <img src="images/p9.jpg " width="100% " height="400px" position=" relative" >
+    <p><h2>Bullet Train in India</h2>A "bullet train" is a high-speed passenger train, and in India, the term primarily refers to the Mumbai-Ahmedabad High-Speed Rail corridor project, which aims to connect the two major cities with a new high-speed line. The project, a collaboration with Japan, is building a 508 km (310 mile) route that will cut the current 8-hour travel time to approximately 3 hours. Key features include speeds up to 320 km/h, a dedicated railway line with advanced technology like ballastless tracks, a 21 km tunnel (including an undersea section), and 12 stations designed with local cultural themes.   </p>
+   </div>
 </body>
 </html>
+
